cabal-version:      3.6
name:               LWHaskellMathLib
version:            0.1.0.0

extra-source-files:
    CHANGELOG.md
    README.md


executable LWHaskellMathLib
    main-is:
        Main.hs


    -- Modules included in this executable, other than Main.
    other-modules:
        MathFunctions,
        SpaceNeedle


    build-depends:
        base ^>=4.14.3.0,
        haskell-say ^>=1.0.0.0,

    hs-source-dirs:   app
    default-language: Haskell2010

